--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
             <h1>Currency Converter Project</h1> 
         </div>
         <p th:text="'Arquitectura Empresarial - AREM, 2018-2'" />
+        <img src="/images/logo.png" alt="CurrencyConverter">
         <p class="lead">
             Esta aplicacion web es un <b>Convertidor de Moneda</b> global, con la mayoria de divisas disponibles en el mundo.<br/>
             Recibe una cantidad de dinero en cierto tipo de divisa y muestra el valor de dicha cantidad de dinero en cualquier divisa deseada.<br/>
